--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.1.6",
     "axios": "^1.2.5",
-    "chart.js": "^4.2.0",
+    "echarts": "^5.4.1",
+    "echarts-for-react": "^3.0.2",
     "html-react-parser": "^3.0.8",
     "millify": "^5.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
