--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
     "antd": "^5.1.6",
     "axios": "^1.2.5",
     "chart.js": "^4.2.0",
@@ -19,16 +16,13 @@
     "react-countup": "^6.4.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "4.4.1",
-    "screenfull": "^6.0.2",
-    "web-vitals": "^2.1.0"
+    "screenfull": "^6.0.2"
   },
-  "devDependencies": {
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
