--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "^5.1.6",
     "axios": "^1.2.5",
     "chart.js": "^4.2.0",
+    "date-fns": "^2.29.3",
     "millify": "^5.0.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
