--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.5",
     "chart.js": "^4.2.0",
     "date-fns": "^2.29.3",
+    "jwt-decode": "^3.1.2",
     "millify": "^5.0.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "4.4.1",
+    "redux-thunk": "^2.4.2",
     "screenfull": "^6.0.2"
   },
   "devDependencies": {},
