--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "jwt-decode": "^3.1.2",
     "millify": "^5.0.1",
     "moment": "^2.29.4",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "4.4.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "screenfull": "^6.0.2"
   },
